samples/_failures_safe/1761695604_557534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48a1896f.c: In function ‘main’:
./samples/SAFE/__tmp_48a1896f.c:153:5: error: expected expression at end of input
  153 |     size_t input_len =
      |     ^~~~~~
./samples/SAFE/__tmp_48a1896f.c:153:5: error: expected declaration or statement at end of input
